# QtPlotter

./: .clang_complete_linux  .clang_complete_linux_backup  .clang_complete_win  .dir-locals-linux.el  .dir-locals.el  .gitignore  .projectile  CMakeLists.txt
plotter/: plotsetting.cpp  plotsetting.h  plotter.cpp  plotter.h  plotter.qrc
src/: main.cpp  observer.h  plotcontrolgaussian.cpp  plotcontrolgaussian.h  plotcontrolinterface.h  plotmodelgaussian.cpp  plotmodelgaussian.h  plotmodelinterface.h  plotsetting.cpp  plotsetting.h  plotter.cpp  plotter.h  plotter.qrc  plotviewgaussian.cpp  plotviewgaussian.h
src/plotter/: observer.h  plotcontrolgaussian.cpp  plotcontrolgaussian.h  plotcontrolinterface.h  plotmodelgaussian.cpp  plotmodelgaussian.h  plotmodelinterface.h  plotsetting.cpp  plotsetting.h  plotter.cpp  plotter.h  plotviewgaussian.cpp  plotviewgaussian.h
